# casdesk

./: .gitignore  .scalafmt.conf  Adjust.fs  Cargo.toml  Dioxus.toml  Forms.fs  Home.fs  LICENSE  Pages.fs  Program.fs  Quotes.fs  README.md  build.rs  casdesk.fsproj  casdesk.sln
Casdesk/: App.cs  Casdesk.csproj  Casdesk.sln  Program.cs
Casdesk/Resources/mockups/: lease_device_form.html  purchase_form.html
Casdesk/Views/: AdjustScene.cs  BaseScene.cs  FormsScene.cs  MainScene.cs  QuoteScene.cs
Casdesk/Windows/: MainWindow.cs
assets/: main.css
assets/mockups/: back_glass_form.html  fragile_screen_form.html  lease_device_form.html  new_device_sale_form.html  purchase_form.html  refurbished_device_sale_form.html  sales_form.html
deploy/windows/: inno_installer_script.iss
resources/mockups/: back_glass_form.html  refurbished_device_sale_form.html
src/: Adjust.scala  BaseScene.scala  Forms.scala  Helpers.scala  Home.scala  Main.scala  Quote.scala  Templating.scala  adjustview.rs  formsview.rs  logger.rs  main.rs  quoteview.rs  resource-config.json  semver.rs  update_manager.rs
src/scenes/: global.css  mod.rs
src/scenes/adjust/: adjust.css  mod.rs
src/scenes/forms/: forms.css  fragile_screen_form.html  io.rs  lease.rs  lease_device_form.html  mod.rs  new_device_sale_form.html  purchase.rs  risk.rs  sale.rs
src/scenes/home/: home.css  mod.rs
src/scenes/quote/: mod.rs  quote.css
src/util/: mod.rs  pdf.rs  renderer.rs
src/utils/: logger.rs  mod.rs  semver.rs  update_manager.rs
