[package]
name = "casdesk"
version = "1.2.0"
edition = "2021"

[dependencies]
arboard = "3.4.1"
dioxus = { version = "0.6.3", features = ["router", "launch"] }
dioxus-free-icons = { version = "0.9", features = ["lucide"] }
notify-rust = "4.11.5"
rbase64 = "2.0.3"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]

[package.metadata.bundle]
name = "Casdesk"

[package.metadata.bundle.mac]
bundle-identifier = "com.github.pubnoconst"