[package]
name = "casdesk"
version = "2.0.0"
edition = "2021"

[build-dependencies]
rbase64 = "2.0.3"

[dependencies]
arboard = "3.4.1"
dioxus = { version = "0.6.3", features = ["router", "launch"] }
dioxus-free-icons = { version = "0.9", features = ["lucide"] }
notify-rust = "4.11.5"
rbase64 = "2.0.3"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["shellapi", "winuser"] }

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]

[package.metadata.bundle]
name = "Casdesk"

[package.metadata.bundle.mac]
bundle-identifier = "com.github.pubnoconst"
